fix section 4 spacing again

--- a/styles.css
+++ b/styles.css
@@ -932,6 +932,18 @@ h3 {
   border-radius: 25px;
 }
 
+.about-me-4-image {
+  width: auto;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.codewars {
+  width: 100%;
+  height: 120%;
+}
+
 .exit-button:hover {
   color: rgb(255, 87, 87);
 }
@@ -955,7 +967,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 30px;
 }
 
 .about-me-3-image {
